# sina-hq-crawler

./: .gitignore  CHANGELOG.md  CLAUDE.md  IO.WebPush4.js  README.md  check_environment.py  config.example.yaml  config.yaml  environment_report.json  pyproject.toml  pytest.ini  reflections.md  run_tests.sh  run_tests_macos.sh  run_tests_wsl.sh  stock_A.js  utils-hq.js
.claude/: settings.json
.claude/agents/: data-quality-reviewer.md  security-reviewer.md
.claude/skills/gen-test/: SKILL.md
.claude/skills/project-conventions/: SKILL.md
docs/: api-exploration-report.md  data-capability-assessment.md  environment-setup-report.md  wsl-optimization-summary.md  wsl-optimization.md  wsl-quick-reference.md
docs/superpowers/specs/: 2026-06-09-daemon-design.md  (+1 more)
src/: CLAUDE.md  analyze.py  config.py  crawler.py  daemon.py  db.py  fetcher.py  health.py  indicators.py  logger.py  maintenance.py  market_data.py  monitor.py  node_fetcher.py  node_parser.py  parser.py  reloader.py  reporter.py  scheduler.py  session.py  storage.py
src/agents/: __init__.py  base.py  fundamentals_analyst.py  market_analyst.py  orchestrator.py  risk_analyst.py  scorer.py  synthesizer.py
tests/: TEST_PLAN.md  conftest.py  test_agents.py  test_analyze.py  test_config.py  test_crawler.py  test_daemon.py  test_db.py  test_fetcher.py  test_health.py  test_indicators.py  test_logger.py  test_maintenance.py  test_market_data.py  test_monitor.py  test_node_parser.py  test_parser.py  test_reloader.py  test_reporter.py  test_scheduler.py  test_session.py  test_storage.py
